Se realizaron cambios en el archivo de código de ServerModel.h, en donde se agregaron las funcionalidades y funciones del robot (lo puse ahí como etapa inicial, es posible cambiar las funciones en un futuro)

--- a/servidor/Makefile
+++ b/servidor/Makefile
@@ -2,10 +2,11 @@
 # Author: Generated for POO TP2 Req4
 
 # Compiler and flags
-CXX = g++
-CXXFLAGS = -std=c++14 -Wall -Wextra -g -O2
-INCLUDES = -I./inc -I./lib
-LDFLAGS = 
+-CXXFLAGS = -std=c++14 -Wall -Wextra -g -O2
++CXXFLAGS = -std=c++14 -Wall -Wextra -g -O2 -pthread
+ INCLUDES = -I./inc -I./lib
+-LDFLAGS = 
++LDFLAGS = -pthread
 
 # XML-RPC library source files
 XMLRPC_SOURCES = lib/XmlRpcClient.cpp \
@@ -16,7 +17,9 @@ XMLRPC_SOURCES = lib/XmlRpcClient.cpp \
                  lib/XmlRpcSocket.cpp \
                  lib/XmlRpcSource.cpp \
                  lib/XmlRpcUtil.cpp \
-                 lib/XmlRpcValue.cpp
+                 lib/XmlRpcValue.cpp \
+				 lib/Robot.cpp \
+				 lib/SerialPort.cpp
 
 # Object files for XML-RPC library
 XMLRPC_OBJECTS = $(XMLRPC_SOURCES:.cpp=.o)
