Hasta aca hay un CRUD de usuarios y funciona bien

--- a/servidor/Makefile
+++ b/servidor/Makefile
@@ -2,11 +2,9 @@
 # Author: Generated for POO TP2 Req4
 
 # Compiler and flags
--CXXFLAGS = -std=c++14 -Wall -Wextra -g -O2
-+CXXFLAGS = -std=c++14 -Wall -Wextra -g -O2 -pthread
- INCLUDES = -I./inc -I./lib
--LDFLAGS = 
-+LDFLAGS = -pthread
+CXXFLAGS = -std=c++17 -Wall -Wextra -g -O2 -pthread
+INCLUDES = -I./inc -I./lib $(shell pkg-config --cflags libpqxx libpq)
+LDFLAGS = -pthread $(shell pkg-config --libs libpqxx libpq)
 
 # XML-RPC library source files
 XMLRPC_SOURCES = lib/XmlRpcClient.cpp \
@@ -19,7 +17,9 @@ XMLRPC_SOURCES = lib/XmlRpcClient.cpp \
                  lib/XmlRpcUtil.cpp \
                  lib/XmlRpcValue.cpp \
 				 lib/Robot.cpp \
-				 lib/SerialPort.cpp
+				 lib/SerialPort.cpp \
+				 lib/db_pool.cpp \
+				 lib/db_pool.cpp
 
 # Object files for XML-RPC library
 XMLRPC_OBJECTS = $(XMLRPC_SOURCES:.cpp=.o)
