Se hizo modular y se probo que funciona

--- a/servidor/Makefile
+++ b/servidor/Makefile
@@ -6,23 +6,27 @@ CXXFLAGS = -std=c++17 -Wall -Wextra -g -O2 -pthread
 INCLUDES = -I./inc -I./lib $(shell pkg-config --cflags libpqxx libpq)
 LDFLAGS = -pthread $(shell pkg-config --libs libpqxx libpq)
 
+# Server sources
+SERVER_SOURCES = $(wildcard src/server/*.cpp)
+
 # XML-RPC library source files
 XMLRPC_SOURCES = lib/XmlRpcClient.cpp \
-                 lib/XmlRpcDispatch.cpp \
-                 lib/XmlRpcServer.cpp \
-                 lib/XmlRpcServerConnection.cpp \
-                 lib/XmlRpcServerMethod.cpp \
-                 lib/XmlRpcSocket.cpp \
-                 lib/XmlRpcSource.cpp \
-                 lib/XmlRpcUtil.cpp \
-                 lib/XmlRpcValue.cpp \
-				 inc/Robot.cpp \
-				 lib/SerialPort.cpp \
-				 lib/db_pool.cpp \
-				 lib/CSVLogger.cpp
+				 lib/XmlRpcDispatch.cpp \
+				 lib/XmlRpcServer.cpp \
+				 lib/XmlRpcServerConnection.cpp \
+				 lib/XmlRpcServerMethod.cpp \
+				 lib/XmlRpcSocket.cpp \
+				 lib/XmlRpcSource.cpp \
+				 lib/XmlRpcUtil.cpp \
+				 lib/XmlRpcValue.cpp \
+			 inc/Robot.cpp \
+			 lib/SerialPort.cpp \
+			 lib/db_pool.cpp \
+			 lib/CSVLogger.cpp
 
 # Object files for XML-RPC library
 XMLRPC_OBJECTS = $(XMLRPC_SOURCES:.cpp=.o)
+SERVER_OBJECTS = $(SERVER_SOURCES:.cpp=.o)
 
 # Target executable
 TARGET = servidor_rpc
@@ -49,7 +53,7 @@ integration-test:
 	@python3 tests/integration_test.py
 
 # Server target
-$(TARGET): $(XMLRPC_OBJECTS) main_servidor.o
+$(TARGET): $(XMLRPC_OBJECTS) $(SERVER_OBJECTS) main_servidor.o
 	$(CXX) $(CXXFLAGS) -o $@ $^ $(LDFLAGS)
 
 # Generic rule for compiling .cpp files
@@ -60,6 +64,7 @@ $(TARGET): $(XMLRPC_OBJECTS) main_servidor.o
 clean:
 	rm -f *.o $(TARGET)
 	rm -f lib/*.o
+	rm -f src/server/*.o
 
 # Help target
 help:
